--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
   <style>
     #visdown-output {max-width: 800px; margin: 0 auto;}
     #visdown-input {display: none;}
-  </style>  
+  </style>
 </head>
 <body>
 
-<div id="visdown-input">  
-  
-# Bar Plot
-  
+<div id="visdown-input">
+
+# Kavitha
+
 ```vis
-data: 
+data:
   url: data/cars.csv
 mark: point
 encoding:
-  x: 
+  x:
     field: kmpl
     type: Q
-  y:   
+  y:
     field: price
     type: Q
   color:
@@ -42,7 +42,7 @@ encoding:
     field: bhp
     type: Q
 ```
-    
+
 </div>
 <div id="visdown-output"></div>
 <script src="visdown.js"></script>
